--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,5 +30,5 @@
     "globals": "^15.9.0",
     "vite": "^5.4.1"
   },
-  "proxy": "http://localhost:8000"
+  "proxy": "https://quizinator-4whc.onrender.com"
 }
